--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jspdf-autotable": "^3.7.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.6.0",
+    "mysqldump": "^3.2.0",
     "next": "^13.4.12",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
