db configured for production

--- a/.env
+++ b/.env
@@ -1,2 +1,6 @@
-NEXT_PUBLIC_APP_URL=http://localhost:3000
-NEXT_PUBLIC_API_URL=http://localhost:3000/api
+# NEXT_PUBLIC_APP_URL=http://localhost:3000
+# NEXT_PUBLIC_API_URL=http://localhost:3000/api
+
+
+NEXT_PUBLIC_APP_URL=https://valudascashflow.vercel.app
+NEXT_PUBLIC_API_URL=https://valudascashflow.vercel.app/api
